--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.1",
     "lucide-react": "^0.453.0",
     "node": "^22.10.0",
     "react": "^18.3.1",
