--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exam-prime",
+  "name": "exam-primed",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,15 +12,22 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "firebase": "^11.0.1",
     "lucide-react": "^0.453.0",
     "node": "^22.10.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^2.5.4"
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
+    "react-use": "^17.5.1",
+    "tailwind-merge": "^2.5.4",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
