--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.0.1",
     "lucide-react": "^0.453.0",
+    "moment": "^2.30.1",
     "node": "^22.10.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
