--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "dompurify": "^3.1.7",
     "firebase": "^11.0.1",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
