--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "react-use": "^17.5.1",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "zustand": "^5.0.0"
   },
