--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": "^22.10.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paystack": "^6.0.0",
