--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
